fixed spacing under header

--- a/workout.css
+++ b/workout.css
@@ -58,5 +58,5 @@ h1 {
 
 .col-md-12 {
 	background-color: #FFEB3B
-	bottom: 20px;
+	margin-bottom: 20px;
 }
